plugins {
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id "io.freefair.lombok" version "6.4.1"
    id "nebula.lint" version "17.7.0"
    id 'java'
}

group = 'jp.kusumotolab'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation files('lib/kGenProg.jar')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'dev.akkinoc.spring.boot:logback-access-spring-boot-starter:3.2.2'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
    implementation 'com.google.googlejavaformat:google-java-format:1.14.0'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

test {
    useJUnitPlatform()
}

exportArgs = ['--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
]

jar {
    enabled = false
    manifest {
        attributes "Main-Class": "jp.kusumotolab.fldemo.BackendApplication"
    }
}

bootJar {
    enabled = false
}


import com.github.jengelman.gradle.plugins.shadow.transformers.PropertiesFileTransformer

shadowJar {
    // Required for Spring
    mergeServiceFiles()
    append 'META-INF/spring.handlers'
    append 'META-INF/spring.schemas'
    append 'META-INF/spring.tooling'
    transform(PropertiesFileTransformer) {
        paths = ['META-INF/spring.factories']
        mergeStrategy = "append"
    }
}
